[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tscv"
description = "A framework for Time series cross-validation"
version = "0.0.1"
authors = [
  { name="Victor Verma", email="vkverma@umich.edu" },
]
maintainers = [
  { name="Victor Verma", email="vkverma@umich.edu" },
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = ["numpy", "pandas", "scikit-learn"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/victorverma/tscv_pkg"
Issues = "https://github.com/victorverma/tscv_pkg/issues"